@@ -940,8 +940,10 @@ int parse_new_id3(mpg123_handle *fr, unsigned long first4bytes)
 										if(fr->rva.level[rva_mode] <= rva2+1)
 										{
 											pos += strlen((char*) realdata) + 1;
-											// channel and two bytes for RVA value
-											if(realsize-pos < 3)
+											debug2("got my pos: %zu - %zu", realsize, pos);
+											/* channel and two bytes for RVA value */
+											/* pos possibly just past the safety zero, so one more than realsize */
+											if(pos > realsize || realsize-pos < 3)
 											{
 												if(NOQUIET)
 													error("bad RVA2 tag (truncated?)");
